# Heart_Prediction

./: Abc.txt  README.md  heart.py  heartpred.ipynb  pyproject.toml  requirements.txt
