[project]
name = "heart-prediction"
version = "0.1.0"
description = "Creating pyprojecttoml"
authors = [
    {name = "BhagyaSreeV29",email = "vemavarapubhagyasree@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.train.dependencies]
scikit-learn = "^1.6"

[tool.poetry.group.inference.dependencies]
numpy ="^2.2.6"

